just a check commit

--- a/src/dapp/flightsurety.css
+++ b/src/dapp/flightsurety.css
@@ -63,8 +63,8 @@ body {
   
   #spinner {
     display: none;
-    border: 16px solid #f3f3f3;
-    border-top: 16px solid #3498db;
+    border: 16px solid #120101;
+    border-top: 16px solid #6334db;
     border-radius: 50%;
     width: 120px;
     height: 120px;
